added custom Input style

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,4 +22,7 @@ body {
     @apply cursor-pointer px-6 py-2 border-t border-l-2 border-b-[4px] border-r-2 border-[#242424] rounded-full uppercase tracking-widest text-xs transition-all hover:border-primary/40 
     hover:text-primary/60;
   }
+  .contactInput {
+    @apply outline-none rounded bg-slate-400/10 border-b-[3px] border-[#242424] focus:border-primary/40 px-6 py-4 text-gray-400 focus:text-primary placeholder-gray-500 transition-all;
+  }
 }
